Add error modals

--- a/html/styles/linemarkcard.less
+++ b/html/styles/linemarkcard.less
@@ -37,6 +37,38 @@
   }
 }
 
+.failure-modal {
+  width:706px;
+  height:278px;
+  background:rgba(50,51,60,1);
+  border-radius:6px;
+  border:1px dashed rgba(71,72,86,1);
+  position: relative;
+  margin: 48px auto;
+  margin-bottom: 36px;
+  .info {
+      width:290px;
+      height:96px;
+      font-size:15px;
+      font-weight:400;
+      color:rgba(161,166,173,1);
+      line-height:22px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+      img {
+          margin: 0 auto;
+          width:32px;
+          height:30px;
+      }
+      p {
+          word-wrap: break-word;
+      }
+  }
+}
+
 .lineMark-pie {
   width: 706px;
   height: 130px;
