--- a/html/styles/nodesGraph.less
+++ b/html/styles/nodesGraph.less
@@ -100,20 +100,20 @@
                     color:rgba(255,255,255,1);
                     line-height:22px;
                     width: 92px;
-                    .circle {
-                        display: inline-block;
-                        border-radius: 50%;
-                        width:10px;
-                        height:10px;
-                        margin-left: 8px;
-                        background:rgba(161,252,58,0.43);
-                        border:1px solid rgba(161,252,58,1);
-                    }
-                    .circle.red {
-                        background:rgba(255,0,117,0.2);
-                        border:1px solid rgba(255,0,117,1);
-                    }
-                }
+                    // .circle {
+                    //     display: inline-block;
+                    //     border-radius: 50%;
+                    //     width:10px;
+                    //     height:10px;
+                    //     margin-left: 8px;
+                    //     background:rgba(161,252,58,0.43);
+                    //     border:1px solid rgba(161,252,58,1);
+                    // }
+                    // .circle.red {
+                    //     background:rgba(255,0,117,0.2);
+                    //     border:1px solid rgba(255,0,117,1);
+                    // }
+                }                
                 .value:nth-child(4),
                 .label:nth-child(2){
                     width: 132px;
@@ -121,7 +121,7 @@
                 }
             }
 
-            li.problem{
+            li.faulty{
                 .value{
                     font-size:15px;
                     font-weight:600;
@@ -142,6 +142,20 @@
                         position: absolute;
                         right: 6px;
                     }
+                }
+            }
+            li.offline{
+                .value{
+                    color: #A1A6AD;
+                }
+                .value:after{
+                    content:"";
+                    position: absolute;
+                    width: 17px;
+                    height:22px;
+                    background: url("../img/icon_toast_warning@2x.png");
+                    background-size: 17px 22px;
+                    margin-left:6px;
                 }
             }
             li:first-child {
