Update node status

--- a/html/styles/nodesGraph.less
+++ b/html/styles/nodesGraph.less
@@ -145,10 +145,11 @@
                 }
             }
             li.offline{
-                .value{
+                .value:nth-child(4){
                     color: #A1A6AD;
+                    position: relative;
                 }
-                .value:after{
+                .value:nth-child(4):after{
                     content:"";
                     position: absolute;
                     width: 17px;
