添加谷歌流量统计

--- a/app_views/templates/index.html
+++ b/app_views/templates/index.html
@@ -14,5 +14,15 @@
 <div id="app"></div>
 
 {% render_bundle 'app' 'js'%}
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159952101-1"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-159952101-1');
+</script>
+
 </body>
 </html>
