--- a/html/styles/headLine.less
+++ b/html/styles/headLine.less
@@ -76,7 +76,7 @@
   .swiper-button-prev {
     width: 34px;
     height: 76px;
-    margin-top: -38px;
+    //margin-top: -38px;
     border-radius: 6px;
   }
   .bg-cover-left {
