feat: 升级jq和swiper版本

--- a/html/styles/headLine.less
+++ b/html/styles/headLine.less
@@ -76,8 +76,11 @@
   .swiper-button-prev {
     width: 34px;
     height: 76px;
-    //margin-top: -38px;
+    margin-top: -38px;
     border-radius: 6px;
+  }
+  .swiper-button-prev:after, .swiper-button-next:after{
+    content: none;
   }
   .bg-cover-left {
     width: 40px;
