feat: 升级webpack到4版本

--- a/html/styles/common.less
+++ b/html/styles/common.less
@@ -1,4 +1,5 @@
-@import "./reset.css";
+@import '~antd/dist/antd.less';
+@import "./reset.less";
 @import "./pagination";
 @import "./dropdownList";
 @import "./nodeList";
